--- a/src/components/use-actor.marko
+++ b/src/components/use-actor.marko
@@ -1,4 +1,5 @@
 import type { Machine, StateMachine as S } from "@zag-js/core";
+import type { State, Event } from "../types";
 
 export interface Input<TContext extends Record<string, any>, TState extends S.StateSchema, TEvent extends S.EventObject = S.AnyEventObject> {
   service: Machine<TContext, TState, TEvent>;
@@ -10,5 +11,5 @@ export interface Input<TContext extends Record<string, any>, TState extends S.St
   [
     actorState,
     input.service.send,
-  ] as const
+  ] as [State<TContext, TState, TEvent>, (evt: Event<TEvent>) => void]
 )/>
