--- a/src/components/use-snapshot.marko
+++ b/src/components/use-snapshot.marko
@@ -1,5 +1,5 @@
 import type { Machine, StateMachine as S } from "@zag-js/core";
-import type { MachineOptions } from "../types";
+import type { MachineOptions, State } from "../types";
 
 export interface Input<TContext extends Record<string, any>, TState extends S.StateSchema, TEvent extends S.EventObject = S.AnyEventObject> {
   service: Machine<TContext, TState, TEvent>;
@@ -26,4 +26,4 @@ export interface Input<TContext extends Record<string, any>, TState extends S.St
   }
 />
 
-<return=(machineState)/>
+<return=(machineState as State<TContext, TState, TEvent>)/>
